fix IllegalAccessError (#133)
See 751 from TestFX